simple docker file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,27 +12,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Setup SSH
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
-          ssh-keyscan -p ${{ secrets.SSH_PORT || '22' }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
-
-      # Sync files to VPS using rsync
       - name: Sync files to VPS
-        run: |
-          rsync -avz --delete \
-            --exclude='.git' \
-            --exclude='node_modules' \
-            --exclude='.env' \
-            --exclude='.github' \
-            --exclude='*.log' \
-            -e "ssh -p ${{ secrets.SSH_PORT || '22' }} -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no" \
-            ./ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.REMOTE_PATH || '/opt/pact-website' }}/
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || '22' }}
+          source: "."
+          target: "${{ secrets.REMOTE_PATH || '/opt/pact-website' }}"
+          overwrite: true
+          rm: false
+          strip_components: 0
+          exclude: |
+            .git
+            node_modules
+            dist
+            .env
+            .github
 
-      # Write env file on VPS
       - name: Write env file on VPS
         uses: appleboy/ssh-action@v1.1.0
         with:
@@ -41,17 +39,12 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
           script: |
-            APP_DIR="${APP_DIR:-${{ secrets.REMOTE_PATH || '/opt/pact-website' }}}"
-            cd "$APP_DIR"
+            cd ${{ secrets.REMOTE_PATH || '/opt/pact-website' }}
             
-            # Create .env file if it doesn't exist
+            # Generate random session secret if .env doesn't exist
             if [ ! -f ".env" ]; then
-              echo "Creating .env file..."
-              
-              # Generate random session secret
               SESSION_SECRET=$(openssl rand -base64 32 | tr -dc 'a-zA-Z0-9')
               
-              # Create .env file with required variables
               cat > .env << EOF
             # Database
             DATABASE_URL=postgresql://neondb_owner:npg_aTqvez1r0bkA@ep-holy-sea-ahwpuzyd-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
@@ -62,14 +55,9 @@ jobs:
             # Frontend API proxy URL
             VITE_API_URL=http://138.68.104.122:8080
             EOF
-              
-              echo ".env file created successfully with generated SESSION_SECRET."
-            else
-              echo ".env file already exists, skipping creation."
             fi
 
-      # Build + restart services on the VPS
-      - name: Deploy via Docker Compose
+      - name: Build and restart app
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -77,28 +65,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}
           script: |
-            set -euo pipefail
-
-            APP_DIR="${APP_DIR:-${{ secrets.REMOTE_PATH || '/opt/pact-website' }}}"
-            COMPOSE_FILE="${COMPOSE_FILE:-docker-compose.prod.yml}"
-
-            mkdir -p "$APP_DIR"
-            cd "$APP_DIR"
-
-            # Stop existing containers if they exist
-            echo "Stopping existing containers..."
-            docker compose -f "$COMPOSE_FILE" down || true
-
-            # Build and restart
-            echo "Building and starting containers..."
-            # Build the app image (--pull ensures base images are up to date)
-            docker compose -f "$COMPOSE_FILE" build --pull
-            # Start all services (nginx and postgres will be pulled automatically if needed)
-            docker compose -f "$COMPOSE_FILE" up -d --remove-orphans
-
-            # Light cleanup to help with disk space
-            docker image prune -f
-            docker volume prune -f
-
-            echo "Deployment completed successfully!"
-
+            cd ${{ secrets.REMOTE_PATH || '/opt/pact-website' }}
+            docker compose -f docker-compose.prod.yml down
+            docker compose -f docker-compose.prod.yml build --pull
+            docker compose -f docker-compose.prod.yml up -d
