--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,15 @@ jobs:
         id: image
         run: |
           REPO_LOWER=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          echo "tag=ghcr.io/${REPO_LOWER}:latest" >> $GITHUB_OUTPUT
-          echo "Image tag: ghcr.io/${REPO_LOWER}:latest"
+          REPO_NAME=$(echo "$REPO_LOWER" | cut -d'/' -f2)
+          echo "tag=mukisavaniah/${REPO_NAME}:latest" >> $GITHUB_OUTPUT
+          echo "Image tag: mukisavaniah/${REPO_NAME}:latest"
 
-      - name: Log in to GHCR
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: mukisavaniah
+          password: dckr_pat_6XoWRCqi6aqhQ1CTVzdmSmm6k9g
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -36,8 +36,8 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY  }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
           envs: IMAGE_TAG
         env:
           IMAGE_TAG: ${{ steps.image.outputs.tag }}
@@ -53,5 +53,7 @@ jobs:
           docker run -d \
             --name app \
             --restart unless-stopped \
-            -p 3000:3000 \
+            -p 5000:5000 \
+            -e NODE_ENV=production \
+            -e PORT=5000 \
             $IMAGE_TAG
