--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:full": "npm install && npm run build",
     "start": "npx drizzle-kit push && NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "setup-storage": "node setup-storage.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -42,6 +43,9 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@supabase/storage-js": "^2.87.1",
+    "@supabase/supabase-js": "^2.87.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.76.0",
     "@tiptap/core": "^2.12.0",
@@ -53,6 +57,8 @@
     "@tiptap/starter-kit": "^2.12.0",
     "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.16",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -66,6 +72,7 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.25.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
@@ -79,11 +86,13 @@
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.2",
     "next-themes": "^0.4.6",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.3",
     "papaparse": "^5.5.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.15.6",
+    "postcss": "^8.4.47",
     "postgres": "^3.4.5",
     "prosemirror-model": "^1.25.1",
     "prosemirror-state": "^1.4.3",
@@ -104,20 +113,15 @@
     "slugify": "^1.6.6",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "vite": "^5.4.14",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "esbuild": "^0.25.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.4.14",
-    "@tailwindcss/typography": "^0.5.16"
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
